updated typography and added foundations for reson for responsive layouts

--- a/assets/sass/typography/_typography.scss
+++ b/assets/sass/typography/_typography.scss
@@ -5,9 +5,13 @@ select,
 optgroup,
 textarea {
 	color: $color__text-main;
-	font-family: $font__main;
-	@include font-size(1);
+	font-family: $font__quicksand;
+	@include font-size(.9);
 	line-height: $font__line-height-body;
+
+  @media screen and (min-width: $query__small) {
+    @include font-size(1);
+  }
 }
 
 @import "headings";
