--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,6 +1,6 @@
 /*!
 Theme Name: Reading with Dragons
-Theme URI: http://underscores.me/
+Theme URI: https://readingwithdragons.com/
 Author: James Stephens
 Author URI: https://jstoobz.com/
 Description: Reading with Dragons is a young adults book blog, by Kelly Stephens, with a primary focus on musings about YA books, heroines, and culture.
@@ -8,13 +8,6 @@ Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: readingwithdragons
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-
-Reading with Dragons is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
-Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
@@ -86,14 +79,14 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import "modules/clearings";
 
 /*--------------------------------------------------------------
-# Widgets
---------------------------------------------------------------*/
-@import "site/secondary/widgets";
-
-/*--------------------------------------------------------------
 # Content
 --------------------------------------------------------------*/
 @import "site/site";
+
+/*--------------------------------------------------------------
+# Widgets
+--------------------------------------------------------------*/
+@import "site/secondary/widgets";
 
 /*--------------------------------------------------------------
 # Infinite scroll
